--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quickstart"
-description: "Get started with WaveAssist in minutes"
+description: "Deploy your first WaveAssist AI assistant in minutes with our step-by-step guide."
+image: "/images/how_it_works_WaveAssist.png"
 ---
 
 # Quickstart: Build Your First Workflow
