--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Getting Started
-description: "Understand what WaveAssist is and how it can help you automate workflows with ease."
+description: "Understand WaveAssist and how to deploy customizable AI assistants quickly and reliably."
+image: "/images/how_it_works_WaveAssist.png"
 ---
 
 # Welcome to WaveAssist
